cleaning colum title

--- a/notebooks/intern_satis_proj_mag.ipynb
+++ b/notebooks/intern_satis_proj_mag.ipynb
@@ -1021,7 +1021,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns = df.columns.str.strip()\n",
+    "\n",
+    "df = df.rename(columns={'How did You hear about Skye8': 'abt_skye8', \n",
+    "                        'Why did You Choose Skye8?': 'why_skye8',\n",
+    "                        'Is this your first time at skye8?': 'is_first_time_at_skye8',\n",
+    "                        'Department (stack) at Skye8.':'department',\n",
+    "                        'How would you Rate the quality of Learning opportunities provided during the internship? hint: were the projects challenging yet achievable.': 'internship_rating',\n",
+    "                        'Did the internship provide tasks or projects that align with your academic goals.':'did_internship_align_with_your_goals',\n",
+    "                        'Give your reason for the above answer.': 'why',\n",
+    "                        'What skills or knowledge have you gained from the internship, what did you do with them and are they productive?': 'skills_gained',\n",
+    "                        'Were the resources (e.g. tool, equipment, materials) provided sufficient for completing task effectively?':'were_provided_resources_sufficient',\n",
+    "                        'How would you describe the work environment?\\n(e.g., Friendly, competitive, stressful, fun, learning-focused, etc.)':'how_would_you_describe_your_working_environment',\n",
+    "                        'How welcoming and inclusive did you find the team? (1-5 scale)\\n(1 = Not welcoming, 5 = Very inclusive and supportive)':'how_inclusive_you_fet_into_the_team',\n",
+    "                        'Did you feel valued as an intern?\\n(Yes = You felt appreciated; No = You felt like an outsider)':'did_feel_valued_as_intern',\n",
+    "                        'Were you encouraged to share ideas and take initiatives?\\n(Yes = Your ideas were welcomed; No = You were expected to just follow orders)': 'was_encouraged_to_share_ideas',\n",
+    "                        'What challenges did you face during your internship?\\n(e.g., Lack of guidance, high workload, unclear expectations, poor communication, etc.)': 'challenges_faced',\n",
+    "                        'What could Skye8 do to improve the intern experience?\\n(Share suggestions like better onboarding, more structured training, more responsibilities, etc.)': 'how_skye8_cam_improve_intern_satisfaction',\n",
+    "                        'On a scale of 1-10, how satisfied are you with your internship?\\n(1 = Very dissatisfied, 10 = Extremely satisfied)': 'how_satified_are_interns',\n",
+    "                        'Would you recommend this internship to others?\\n(Yes = You’d tell others to apply; No = You wouldn’t recommend it)':'will_recomend_internship_to_others',\n",
+    "                        'Would you consider working at Skye8 in the future?\\n(Yes = You’d love to return; No = You wouldn’t want to work there again)':'would_like_to_work_at_skye8',\n",
+    "                        'Any additional comments or feedback? \\n(Open-ended, you can share anything else you feel is important)':'additional_comments',\n",
+    "                        })\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1904,34 +1935,12 @@
        "[21 rows x 27 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.columns = df.columns.str.strip()\n",
-    "\n",
-    "df = df.rename(columns={'How did You hear about Skye8': 'abt_skye8', \n",
-    "                        'Why did You Choose Skye8?': 'why_skye8',\n",
-    "                        'Is this your first time at skye8?': 'is_first_time_at_skye8',\n",
-    "                        'Department (stack) at Skye8.':'department',\n",
-    "                        'How would you Rate the quality of Learning opportunities provided during the internship? hint: were the projects challenging yet achievable.': 'internship_rating',\n",
-    "                        'Did the internship provide tasks or projects that align with your academic goals.':'did_internship_align_with_your_goals',\n",
-    "                        'Give your reason for the above answer.': 'why',\n",
-    "                        'What skills or knowledge have you gained from the internship, what did you do with them and are they productive?': 'skills_gained',\n",
-    "                        'Were the resources (e.g. tool, equipment, materials) provided sufficient for completing task effectively?':'were_provided_resources_sufficient',\n",
-    "                        'How would you describe the work environment?\\n(e.g., Friendly, competitive, stressful, fun, learning-focused, etc.)':'how_would_you_describe_your_working_environment',\n",
-    "                        'How welcoming and inclusive did you find the team? (1-5 scale)\\n(1 = Not welcoming, 5 = Very inclusive and supportive)':'how_inclusive_you_fet_into_the_team',\n",
-    "                        'Did you feel valued as an intern?\\n(Yes = You felt appreciated; No = You felt like an outsider)':'did_feel_valued_as_intern',\n",
-    "                        'Were you encouraged to share ideas and take initiatives?\\n(Yes = Your ideas were welcomed; No = You were expected to just follow orders)': 'was_encouraged_to_share_ideas',\n",
-    "                        'What challenges did you face during your internship?\\n(e.g., Lack of guidance, high workload, unclear expectations, poor communication, etc.)': 'challenges_faced',\n",
-    "                        'What could Skye8 do to improve the intern experience?\\n(Share suggestions like better onboarding, more structured training, more responsibilities, etc.)': 'how_skye8_cam_improve_intern_satisfaction',\n",
-    "                        'On a scale of 1-10, how satisfied are you with your internship?\\n(1 = Very dissatisfied, 10 = Extremely satisfied)': 'how_satified_are_interns',\n",
-    "                        'Would you recommend this internship to others?\\n(Yes = You’d tell others to apply; No = You wouldn’t recommend it)':'will_recomend_internship_to_others',\n",
-    "                        'Would you consider working at Skye8 in the future?\\n(Yes = You’d love to return; No = You wouldn’t want to work there again)':'would_like_to_work_at_skye8',\n",
-    "                        'Any additional comments or feedback? \\n(Open-ended, you can share anything else you feel is important)':'additional_comments'\n",
-    "                        })\n",
     "df\n"
    ]
   }
