--- a/notebooks/intern_statisfaction.ipynb
+++ b/notebooks/intern_statisfaction.ipynb
@@ -553,7 +553,7 @@
     }
    ],
    "source": [
-    "df = df.rename(columns={'Full Name  You can provide your name or leave it blank if you prefer to stay anonymous.':'full_name'})\n",
+    "df = df.rename(columns={'Full Name  You can provide your name or leave it blank if you prefer to stay anonymous.':'full_name',})\n",
     "df"
    ]
   },
