--- a/intern_satisfaction.ipynb
+++ b/intern_satisfaction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "d2b447b4-1771-46f8-b8e4-ceaa1ff2867a",
+       "ref": "1399395a-949a-4fdc-8031-dd9c44df0f92",
        "rows": [
         [
          "0",
@@ -943,7 +943,7 @@
        "18                                        HICM             Digital marketing  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5388,7 +5388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -5537,7 +5537,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "d851d318-b676-47ab-ae46-c12fa8194743",
+       "ref": "2c9a62ad-4fa7-4f5d-802e-a5d1d4c8848d",
        "rows": [
         [
          "0",
@@ -7053,7 +7053,7 @@
        "[21 rows x 27 columns]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7086,7 +7086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -7165,7 +7165,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "0ee67a22-b716-49ab-8e9a-fcc6ee8ed6c2",
+       "ref": "22a247d7-88b1-4cb3-bcdb-ad4fa2f1bf28",
        "rows": [
         [
          "0",
@@ -7948,7 +7948,7 @@
        "18                                        HICM    Digital marketing  "
       ]
      },
-     "execution_count": 132,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7973,7 +7973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -8152,7 +8152,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "732111f1-0a42-47ae-958e-6c787ba0b9a3",
+       "ref": "56626255-d9de-4839-aa87-65a4e0c89646",
        "rows": [
         [
          "0",
@@ -8755,7 +8755,7 @@
        "18   Digital marketing                       ADVANCED LEVEL  "
       ]
      },
-     "execution_count": 134,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8763,8 +8763,8 @@
    "source": [
     "print(df1.columns)\n",
     "print(df1)\n",
-    "df1_0 = df1.drop( columns=['Username', 'Full Name', 'Phone','Education Completed'], axis=1)\n",
-    "df1_0\n"
+    "df1 = df1.drop( columns=['Username', 'Full Name', 'Phone','Education Completed'], axis=1)\n",
+    "df1\n"
    ]
   },
   {
@@ -12143,12 +12143,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
     "df1.to_csv('new_File1.csv', index=False)\n",
-    "df2.to_csv('new_File2.csv', index=False)\n"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2.to_csv('new_File2.csv', index=False)"
    ]
   },
   {
