--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 33,
       "metadata": {
         "id": "F4NZyRAKrqam"
       },
@@ -14,6 +14,13 @@
         "from wordcloud import WordCloud\n",
         "import numpy as np\n",
         "import plotly.graph_objects as go"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<font size=\"15\">MAFO</font>\n"
       ]
     },
     {
@@ -640,6 +647,13 @@
         "plt.ylabel('Duration (days)')\n",
         "plt.legend()\n",
         "plt.show()\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<font size = '15'>GAIOUS"
       ]
     },
     {
@@ -1838,6 +1852,13 @@
         "plt.grid(axis='x', linestyle='--', alpha=0.7)\n",
         "plt.tight_layout()\n",
         "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "<font size = '15'>BILL"
       ]
     },
     {
